--- a/Views/StructureContent.axaml
+++ b/Views/StructureContent.axaml
@@ -93,21 +93,6 @@
 						</StackPanel>
 						<!-- /Officer Title -->
 
-								<!-- Warrant Type ComboBox -->
-								<StackPanel Grid.Column="2">
-									<TextBlock Text="Warrant Type"
-									   VerticalAlignment="Center"
-									   Margin="5, 0, 0, 0" />
-									<Border BorderBrush="{Binding WarrantTypeBorder}"
-											BorderThickness="2">
-										<ComboBox ItemsSource="{Binding WarrantTypes}"
-												  SelectedItem="{Binding WarrantTypeSelection}"
-												  PlaceholderText="Select Warrant Type">
-										</ComboBox>
-									</Border>
-								</StackPanel>
-								<!-- /Warrant Type ComboBox -->
-
 					</Grid>
 
 					<Grid ColumnDefinitions="*, Auto">
@@ -235,10 +220,8 @@
 					</StackPanel>
 					<!-- /Crime Entry Group -->
 
-<!-- *****DYNAMIC CONTENT***** -->
-
 					<!-- Residence Address -->
-					<StackPanel IsVisible="{Binding ShowResidenceAddress}">
+					<StackPanel>
 						<TextBlock Text="Residence Address"
 								   VerticalAlignment="Center"
 								   Margin="5, 0, 0, 0" />
@@ -250,7 +233,7 @@
 					<!-- /Residence Address -->
 
 					<!-- Residence Legal Description -->
-					<StackPanel IsVisible="{Binding ShowResidenceDescription}">
+					<StackPanel>
 						<TextBlock Text="Residence Legal Description"
 								   VerticalAlignment="Center"
 								   Margin="5, 0, 0, 0" />
@@ -263,66 +246,6 @@
 						</Border>
 					</StackPanel>
 					<!-- /Residence Legal Description -->
-
-					<!-- Vehicle Description -->
-					<StackPanel IsVisible="{Binding ShowVehicleDescription}">
-						<TextBlock Text="Vehicle Description"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding VehicleDescriptionBorder}"
-								BorderThickness="2">
-							<TextBox Text="{Binding VehicleDescriptionText}"
-									 AcceptsReturn="True"
-									 TextWrapping="Wrap"
-									 Height="60" />
-						</Border>
-					</StackPanel>
-					<!-- /Vehicle Description -->
-
-					<!-- Suspect Name -->
-					<StackPanel IsVisible="{Binding ShowSuspectName}">
-						<TextBlock Text="Suspect Name"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding SuspectNameBorder}"
-								BorderThickness="2">
-							<TextBox Text="{Binding SuspectNameText}"
-									 AcceptsReturn="True"
-									 TextWrapping="Wrap"
-									 Height="60" />
-						</Border>
-					</StackPanel>
-					<!-- /Suspect Name -->
-
-					<!-- Suspect Date of Birth -->
-					<StackPanel IsVisible="{Binding ShowSuspectDateOfBirth}">
-						<TextBlock Text="Suspect Suspect Date of Birth"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding SuspectDateOfBirthBorder}"
-								BorderThickness="2">
-							<TextBox Text="{Binding SuspectDateOfBirthText}"
-									 AcceptsReturn="True"
-									 TextWrapping="Wrap"
-									 Height="60" />
-						</Border>
-					</StackPanel>
-					<!-- /Suspect Date of Birth -->
-
-					<!-- Suspect Driver's License Number -->
-					<StackPanel IsVisible="{Binding ShowSuspectDriversLicense}">
-						<TextBlock Text="Suspect Driver's License Number"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding SuspectDriversLicenseBorder}"
-								BorderThickness="2">
-							<TextBox Text="{Binding SuspectDriversLicenseText}"
-									 AcceptsReturn="True"
-									 TextWrapping="Wrap"
-									 Height="60" />
-						</Border>
-					</StackPanel>
-					<!-- /Suspect Driver's License Number -->
 
 					<!-- Output File -->
 					<StackPanel Grid.Column="0">
