--- a/Views/ReturnInventoryContent.axaml
+++ b/Views/ReturnInventoryContent.axaml
@@ -1,7 +1,213 @@
 <UserControl xmlns="https://github.com/avaloniaui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="using:WarrantGenerator.ViewModels"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
              x:Class="WarrantGenerator.Views.ReturnInventoryContentTab"
 			 x:DataType="vm:ReturnInventoryContentViewModel">
-    <TextBlock Text="RETURN INVENTORY" />
+
+	<ScrollViewer>
+		<Grid ColumnDefinitions="*, 10, *"
+			  RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto">
+
+			<Grid Grid.Column="0"
+				  Grid.Row="0"
+				  ColumnDefinitions="*, *">
+
+				<!-- Officer Name -->
+			<StackPanel Grid.Column="0"
+						Grid.Row="0">
+				<TextBlock Text="Officer Name"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding OfficerNameBorder}"
+						BorderThickness="2">
+					<TextBox x:Name="OfficerNameTextBox"
+							 Text="{Binding OfficerNameText}" />
+				</Border>
+			</StackPanel>
+			<!-- /Officer Name -->
+			
+					<!-- Officer Title -->
+				<StackPanel Grid.Column="1"
+							Orientation="Horizontal">
+				<StackPanel>
+					<TextBlock Text="Officer Title"
+					   VerticalAlignment="Center"
+					   Margin="5, 0, 0, 0" />
+					<Border BorderBrush="{Binding OfficerTitleBorder}"
+							BorderThickness="2">
+						<ComboBox ItemsSource="{Binding OfficerTitles}"
+								  SelectedItem="{Binding OfficerTitleSelection}"
+								  PlaceholderText="Select Rank">
+						</ComboBox>
+					</Border>
+				</StackPanel>
+
+				<StackPanel VerticalAlignment="Bottom">
+					<Border BorderBrush="{Binding CustomOfficerTitleBorder}"
+							BorderThickness="2">
+						<TextBox Text="{Binding CustomOfficerTitleText}"
+								 Width="150"
+								 IsVisible="{Binding CustomOfficerTitleVisibility}" />
+					</Border>
+				</StackPanel>
+				</StackPanel>
+				<!-- /Officer Title -->
+
+
+			</Grid>
+
+			<!-- District and Warrant Signed by Grid -->
+			<Grid Grid.Column="2"
+				  Grid.Row="0"
+				  ColumnDefinitions="Auto, 10, *">
+
+				<!-- Court District -->
+				<StackPanel Grid.Column="0"
+					VerticalAlignment="Center">
+					<TextBlock Text="Court District"
+							   VerticalAlignment="Center"
+							   Margin="5, 0, 0, 0" />
+					<ComboBox ItemsSource="{Binding CourtDistrictTypes}"
+							  SelectedItem="{Binding CourtDistrictSelection}"
+							  SelectedIndex="2">
+					</ComboBox>
+				</StackPanel>
+				<!-- /Court District -->
+
+				<!-- Warrant Signed By -->
+				<StackPanel Grid.Column="2">
+					<TextBlock Text="Warrant Signed by"
+							   Margin="5, 0, 0, 0" />
+					<Border BorderBrush="{Binding WarrantSignedByBorder}"
+							BorderThickness="2">
+						<TextBox Text="{Binding WarrantSignedByText}" />
+					</Border>
+				</StackPanel>
+				<!-- /Warrant Signed By -->
+
+			</Grid>
+			<!-- /District and Signed by Grid -->
+
+			<!-- /Signed Date -->
+			<StackPanel Grid.Column="0"
+						Grid.Row="2"
+						Margin="15">
+				<TextBlock Text="Warrant Signed Date"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding SignedDateBorder}"
+						BorderThickness="2">
+					<DatePicker SelectedDate="{Binding SignedDateSelection}" />
+				</Border>
+			</StackPanel>
+			<!-- /Signed Date -->
+
+			<!-- /Served Date -->
+			<StackPanel Grid.Column="2"
+						Grid.Row="2"
+						Margin="15">
+				<TextBlock Text="Warrant Served Date"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding ServedDateBorder}"
+						BorderThickness="2">
+					<DatePicker SelectedDate="{Binding ServedDateSelection}" />
+				</Border>
+			</StackPanel>
+			<!-- /Served Date -->
+
+			<!-- Searchable Property -->
+			<StackPanel Grid.Column="0"
+						Grid.Row="1"
+						Grid.ColumnSpan="3"
+						Margin="0, 10, 0, 0">
+				<TextBlock Text="Description of Searchable Property"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding SearchablePropertyBorder}"
+						BorderThickness="2">
+					<TextBox x:Name="SearchablePropertyTextBox"
+						     Text="{Binding SearchablePropertyText}"
+							 AcceptsReturn="True"
+							 TextWrapping="Wrap"
+							 MinHeight="150" />
+				</Border>
+			</StackPanel>
+			<!-- /Searchable Property -->
+
+			<!-- Seized Property -->
+			<StackPanel Grid.Column="0"
+						Grid.Row="3"
+						Grid.ColumnSpan="3"
+						Margin="0, 0, 0, 15">
+				<TextBlock Text="Description of Seized Property"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding SeizedPropertyBorder}"
+						BorderThickness="2">
+					<TextBox x:Name="SeizedPropertyTextBox"
+						     Text="{Binding SeizedPropertyText}"
+							 AcceptsReturn="True"
+							 TextWrapping="Wrap"
+							 MinHeight="150" />
+				</Border>
+			</StackPanel>
+			<!-- /Seized Property -->
+
+			<!-- Document Types -->
+			<Border Grid.Column="0"
+					Grid.Row="4"
+					BorderBrush="{Binding DocumentTypeCheckboxesBorder}"
+					BorderThickness="2">
+				<Grid Grid.Column="0"
+					  Grid.Row="4"
+					  ColumnDefinitions="Auto, Auto, Auto, Auto">
+					<TextBlock Grid.Column="0"
+							   Text="Documents to Generate:"
+							   VerticalAlignment="Center"/>
+					<CheckBox Grid.Column="1"
+							  Content="Return and Request"
+							  Margin="15, 0, 0, 0"
+							  IsChecked="{Binding ReturnAndRequestChecked}" />
+					<CheckBox Grid.Column="2"
+							  Content="Inventory"
+							  Margin="15, 0, 0, 0"
+							  IsChecked="{Binding InventoryChecked}" />
+					<CheckBox Grid.Column="3"
+							  Content="Order"
+							  Margin="15, 0, 0, 0"
+							  IsChecked="{Binding OrderChecked}" />
+				</Grid>
+			</Border>
+			<!-- /Document Types -->
+
+			<!-- Output File -->
+			<StackPanel Grid.Column="0"
+						Grid.Row="5"
+						Margin="0, 15, 0, 0">
+				<TextBlock Text="Output File Name"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+				<Border BorderBrush="{Binding OutputFileNameBorder}"
+						BorderThickness="2">
+					<TextBox Text="{Binding OutputFileNameText}" />
+				</Border>
+				<Button Command="{Binding GenerateDocument}"
+						Margin="0, 10, 0, 0"
+						Content="Generate Document">
+					<Button.Flyout>
+						<Flyout Placement="RightEdgeAlignedTop">
+							<StackPanel>
+								<TextBlock Text="{Binding FlyoutMessage}" />
+							</StackPanel>
+						</Flyout>
+					</Button.Flyout>
+				</Button>
+			</StackPanel>
+			<!-- /Output File -->
+
+		</Grid>
+	</ScrollViewer>
 </UserControl>
+
